[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/SceneChangeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Music/Decal Story.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/font_default.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/osb_stop.png" type="Texture" id=9]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -380.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 8 )
text = "Score: %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.321569 )

[node name="Title" parent="PauseOverlay" instance=ExtResource( 3 )]
margin_top = 150.0
margin_bottom = 320.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -200.0
margin_right = 268.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton2" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_right = 536.0
margin_bottom = 138.0

[node name="MainScreenButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
margin_top = 146.0
margin_right = 536.0
margin_bottom = 285.0
text = "Back to Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 6 )]
margin_top = 293.0
margin_right = 536.0
margin_bottom = 432.0

[node name="stop" type="TouchScreenButton" parent="PauseOverlay/PauseMenu"]
position = Vector2( -1012, -600 )
scale = Vector2( 3, 3 )
normal = ExtResource( 9 )
action = "pause"
visibility_mode = 1

[node name="nore" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
